<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:elevation="8dp"
    android:background="@color/cardview_light_background"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/levelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:text="@string/level_number" />


        <ImageView
            android:id="@+id/lockImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/levelTitle"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/level_state"
            app:srcCompat="@drawable/outline_lock_black_36" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lockImageView"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/firstSubLevel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/first_level_preview"
                app:srcCompat="@android:color/black" />

            <ImageView
                android:id="@+id/secondSubLevel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/second_level_preview"
                app:srcCompat="@android:color/black" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>