<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".picker.LevelPickerActivity">

    <LinearLayout
        android:id="@+id/actionMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@color/cardview_light_background"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3">

        <ImageView
            android:id="@+id/previousUniverse"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:contentDescription="@string/move_to_previous_universe"
            android:src="@drawable/ic_arrow_up" />

        <ImageView
            android:id="@+id/toggleVolume"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toggle_volume"
            android:src="@drawable/ic_volume_off" />

        <ImageView
            android:id="@+id/nextUniverse"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/move_to_next_universe"
            android:src="@drawable/ic_arrow_down" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@id/actionMenu"
        android:scrollbars="vertical" />
</RelativeLayout>